--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>de.dm.infrastructure</groupId>
     <artifactId>micrometer-metrics-wrapper</artifactId>
-    <version>1.4.0-SNAPSHOT</version>
+    <version>1.4.1-SNAPSHOT</version>
 
     <name>micrometer-metrics-wrapper</name>
     <description>Micrometer wrapper to allow generic class level metric values</description>
@@ -43,7 +43,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
+        <version>2.7.6</version>
         <relativePath/>
     </parent>
 
@@ -55,10 +55,10 @@
 
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version.version>3.3.2</maven-javadoc-plugin.version.version>
-        <nexus-staging-maven-plugin.version>1.6.12</nexus-staging-maven-plugin.version>
+        <maven-javadoc-plugin.version.version>3.4.1</maven-javadoc-plugin.version.version>
+        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
         <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-        <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
 
         <sonar.coverage.exclusions>**/*App.java,**/*Properties.java</sonar.coverage.exclusions>
     </properties>
@@ -247,7 +247,7 @@
         <connection>scm:git:git://github.com/dm-drogeriemarkt/micrometer-metrics-wrapper.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/dm-drogeriemarkt/micrometer-metrics-wrapper.git
         </developerConnection>
-        <url>http://github.com/dm-drogeriemarkt/micrometer-metrics-wrapper/tree/master</url>
+        <url>https://github.com/dm-drogeriemarkt/micrometer-metrics-wrapper/tree/master</url>
     </scm>
 
 </project>
